--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -101,7 +101,7 @@
    border-radius: 50%;
    background: rgba(255, 255, 255, 0.1);
  
-   transition: background var(--250ms-animation);
+   transition: background var(--animation);
  }
  
  .footer-social-list-link:hover,
