--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -91,7 +91,7 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--secondary-color);
-    transition: color var(--250ms-animation);
+    transition: color var(--animation);
   }
   
   .menu-link:hover,
@@ -113,7 +113,7 @@
     line-height: 1.33;
     letter-spacing: 0.04em;
     color: var(--primary-color);
-    transition: color var(--250ms-animation);
+    transition: color var(--animation);
   }
   
   .contact-link:hover,
@@ -131,7 +131,7 @@
    height: 4px;
    border-radius: 2px;
    background-color: var(--accent-color);
-   transition: opacity var(--250ms-animation);
+   transition: opacity var(--animation);
  
    opacity: 1;
  }
@@ -155,7 +155,7 @@
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--primary-color);
-   transition: color var(--250ms-animation);
+   transition: color var(--animation);
  }
  
  .contact-link:hover,
@@ -225,7 +225,7 @@
 //    line-height: 1.5;
 //    letter-spacing: 0.02em;
 //    color: var(--secondary-color);
-//    transition: color var(--250ms-animation);
+//    transition: color var(--animation);
 //  }
  
 //  .menu-link:hover,
@@ -243,7 +243,7 @@
 //    height: 4px;
 //    border-radius: 2px;
 //    background-color: var(--accent-color);
-//    transition: opacity var(--250ms-animation);
+//    transition: opacity var(--animation);
  
 //    opacity: 1;
 //  }
@@ -257,7 +257,7 @@
 //    line-height: 1.5;
 //    letter-spacing: 0.02em;
 //    color: var(--primary-color);
-//    transition: color var(--250ms-animation);
+//    transition: color var(--animation);
 //  }
  
 //  .contact-link:hover,
