--- a/sass/components/_portfolliocards.scss
+++ b/sass/components/_portfolliocards.scss
@@ -12,7 +12,7 @@
  
  .card-portfolio {
    display: block;
-   transition: box-shadow var(--250ms-animation);
+   transition: box-shadow var(--animation);
  }
  
  .portfolio {
