--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -75,7 +75,7 @@ color: var(--primary-color);
    border-radius: 50%;
    background-color: var(--primary-brand);
  
-   transition: background-color var(--250ms-animation);
+   transition: background-color var(--animation);
  }
  
  .social-list-link:hover,
