--- a/sass/components/_typography.scss
+++ b/sass/components/_typography.scss
@@ -22,7 +22,7 @@
  .section-description {
    line-height: 1.5;
    letter-spacing: 0.02em;
-   margin-bottom: 8px;
+  //  margin-bottom: 8px;
  
    color: var(--primary-color);
  }
