--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   --primary-brand: #4d5ae5;
   --secondary-color: #2e2f42;
   --basic-white-color: #ffffff;
-  --250ms-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .visually-hiden {
@@ -104,7 +104,6 @@ img {
 .section-description {
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-bottom: 8px;
   color: var(--primary-color);
 }
 
@@ -131,8 +130,8 @@ img {
   cursor: pointer;
   color: var(--basic-white-color);
   background-color: var(--primary-brand);
-  -webkit-transition: background-color var(--250ms-animation);
-  transition: background-color var(--250ms-animation);
+  -webkit-transition: background-color var(--animation);
+  transition: background-color var(--animation);
 }
 
 .modal-btn:hover,
@@ -162,8 +161,8 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  -webkit-transition: color var(--250ms-animation);
-  transition: color var(--250ms-animation);
+  -webkit-transition: color var(--animation);
+  transition: color var(--animation);
 }
 
 .icon-close-modal-btn:hover,
@@ -201,8 +200,8 @@ img {
   cursor: pointer;
   color: #ffffff;
   background-color: var(--primary-brand);
-  -webkit-transition: background-color var(--250ms-animation);
-  transition: background-color var(--250ms-animation);
+  -webkit-transition: background-color var(--animation);
+  transition: background-color var(--animation);
 }
 
 .modal-form-submit:hover,
@@ -285,10 +284,10 @@ img {
   letter-spacing: 0.04em;
   cursor: pointer;
   color: var(--primary-brand);
-  -webkit-transition: color var(--250ms-animation), background-color var(--250ms-animation), -webkit-box-shadow var(--250ms-animation);
-  transition: color var(--250ms-animation), background-color var(--250ms-animation), -webkit-box-shadow var(--250ms-animation);
-  transition: color var(--250ms-animation), background-color var(--250ms-animation), box-shadow var(--250ms-animation);
-  transition: color var(--250ms-animation), background-color var(--250ms-animation), box-shadow var(--250ms-animation), -webkit-box-shadow var(--250ms-animation);
+  -webkit-transition: color var(--animation), background-color var(--animation), -webkit-box-shadow var(--animation);
+  transition: color var(--animation), background-color var(--animation), -webkit-box-shadow var(--animation);
+  transition: color var(--animation), background-color var(--animation), box-shadow var(--animation);
+  transition: color var(--animation), background-color var(--animation), box-shadow var(--animation), -webkit-box-shadow var(--animation);
 }
 
 .menu-btn:hover,
@@ -380,8 +379,8 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--secondary-color);
-    -webkit-transition: color var(--250ms-animation);
-    transition: color var(--250ms-animation);
+    -webkit-transition: color var(--animation);
+    transition: color var(--animation);
   }
   .menu-link:hover,
 .menu-link:focus {
@@ -405,8 +404,8 @@ img {
     line-height: 1.33;
     letter-spacing: 0.04em;
     color: var(--primary-color);
-    -webkit-transition: color var(--250ms-animation);
-    transition: color var(--250ms-animation);
+    -webkit-transition: color var(--animation);
+    transition: color var(--animation);
   }
   .contact-link:hover,
 .contact-link:focus {
@@ -422,8 +421,8 @@ img {
     height: 4px;
     border-radius: 2px;
     background-color: var(--accent-color);
-    -webkit-transition: opacity var(--250ms-animation);
-    transition: opacity var(--250ms-animation);
+    -webkit-transition: opacity var(--animation);
+    transition: opacity var(--animation);
     opacity: 1;
   }
   .current {
@@ -441,8 +440,8 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--primary-color);
-    -webkit-transition: color var(--250ms-animation);
-    transition: color var(--250ms-animation);
+    -webkit-transition: color var(--animation);
+    transition: color var(--animation);
   }
   .contact-link:hover,
 .contact-link:focus {
@@ -500,8 +499,8 @@ img {
     height: 432px;
     margin-right: auto;
     margin-left: auto;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/img-2x/hero-studio/bgi-mobile.jpg");
-    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/img-2x/hero-studio/bgi-mobile.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/Img-2x/hero-studio/bgi-mobile.jpg");
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/Img-2x/hero-studio/bgi-mobile.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -532,8 +531,8 @@ img {
     height: 436px;
     margin-right: auto;
     margin-left: auto;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/img-2x/hero-studio/bgi-tablet.jpg");
-    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/img-2x/hero-studio/bgi-tablet.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/Img-2x/hero-studio/bgi-tablet.jpg");
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/Img-2x/hero-studio/bgi-tablet.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -564,8 +563,8 @@ img {
     height: 600px;
     margin-right: auto;
     margin-left: auto;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/img-2x/hero-studio/bgi-desktop.jpg");
-    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/img-2x/hero-studio/bgi-desktop.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/Img-2x/hero-studio/bgi-desktop.jpg");
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/Img-2x/hero-studio/bgi-desktop.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -584,20 +583,20 @@ img {
 }
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), (-webkit-min-device-pixel-ratio: 2) and (max-width: 767px), (min-resolution: 192dpi) and (max-width: 767px), (min-resolution: 2dppx) and (max-width: 767px) {
   .hero-background {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/img-2x/hero-studio/bgi-mobile@2x.jpg");
-    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/img-2x/hero-studio/bgi-mobile@2x.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/Img-2x/hero-studio/bgi-mobile@2x.jpg");
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/Img-2x/hero-studio/bgi-mobile@2x.jpg");
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), (-webkit-min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px), (min-resolution: 2dppx) and (min-width: 768px) {
   .hero-background {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/img-2x/hero-studio/bgi-tablet@2x.jpg");
-    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/img-2x/hero-studio/bgi-tablet@2x.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/Img-2x/hero-studio/bgi-tablet@2x.jpg");
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/Img-2x/hero-studio/bgi-tablet@2x.jpg");
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), (-webkit-min-device-pixel-ratio: 2) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 1200px), (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero-background {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/img-2x/hero-studio/bgi-desktop@2x.jpg");
-    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/img-2x/hero-studio/bgi-desktop@2x.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(46, 47, 66, 0.7)), to(rgba(46, 47, 66, 0.7))), url("../images/Img-2x/hero-studio/bgi-desktop@2x.jpg");
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/Img-2x/hero-studio/bgi-desktop@2x.jpg");
   }
 }
 @media screen and (max-width: 1199px) {
@@ -836,8 +835,8 @@ img {
   height: 40px;
   border-radius: 50%;
   background-color: var(--primary-brand);
-  -webkit-transition: background-color var(--250ms-animation);
-  transition: background-color var(--250ms-animation);
+  -webkit-transition: background-color var(--animation);
+  transition: background-color var(--animation);
 }
 
 .social-list-link:hover,
@@ -890,13 +889,14 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 0px;
   width: 168px;
   height: 88px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   fill: #8e8f99;
-  -webkit-transition: border var(--250ms-animation), fill var(--250ms-animation);
-  transition: border var(--250ms-animation), fill var(--250ms-animation);
+  -webkit-transition: border var(--animation), fill var(--animation);
+  transition: border var(--animation), fill var(--animation);
 }
 @media screen and (max-width: 767px) {
   .customers-list-link {
@@ -911,6 +911,7 @@ img {
 }
 
 .customers-list-item {
+  max-width: 168px;
   -ms-flex-preferred-size: calc((100% - 16px) / 2);
       flex-basis: calc((100% - 16px) / 2);
 }
@@ -1044,8 +1045,8 @@ img {
   height: 40px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
-  -webkit-transition: background var(--250ms-animation);
-  transition: background var(--250ms-animation);
+  -webkit-transition: background var(--animation);
+  transition: background var(--animation);
 }
 
 .footer-social-list-link:hover,
@@ -1184,8 +1185,8 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  -webkit-transition: visibility var(--250ms-animation), opacity var(--250ms-animation);
-  transition: visibility var(--250ms-animation), opacity var(--250ms-animation);
+  -webkit-transition: visibility var(--animation), opacity var(--animation);
+  transition: visibility var(--animation), opacity var(--animation);
 }
 
 .backdrop.is-hidden {
@@ -1262,8 +1263,8 @@ img {
   border-radius: 4px;
   padding-left: 38px;
   color: var(--primary-color);
-  -webkit-transition: border-color var(--250ms-animation);
-  transition: border-color var(--250ms-animation);
+  -webkit-transition: border-color var(--animation);
+  transition: border-color var(--animation);
 }
 
 .modal-form-input:focus {
@@ -1285,8 +1286,8 @@ img {
   display: block;
   width: 18px;
   height: 18px;
-  -webkit-transition: fill var(--250ms-animation);
-  transition: fill var(--250ms-animation);
+  -webkit-transition: fill var(--animation);
+  transition: fill var(--animation);
 }
 
 .modal-form-input:focus + .modal-form-input-icon {
@@ -1301,8 +1302,8 @@ img {
   padding: 8px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  -webkit-transition: border-color var(--250ms-animation);
-  transition: border-color var(--250ms-animation);
+  -webkit-transition: border-color var(--animation);
+  transition: border-color var(--animation);
 }
 
 .modal-form-comment::-webkit-input-placeholder {
@@ -1378,8 +1379,8 @@ img {
   content: "";
   cursor: pointer;
   margin-right: 8px;
-  -webkit-transition: background-color var(--250ms-animation), background-image var(--250ms-animation);
-  transition: background-color var(--250ms-animation), background-image var(--250ms-animation);
+  -webkit-transition: background-color var(--animation), background-image var(--animation);
+  transition: background-color var(--animation), background-image var(--animation);
 }
 
 .modal-form-chek:checked + .modal-form-chek-desc::before {
@@ -1410,10 +1411,10 @@ img {
 
 .card-portfolio {
   display: block;
-  -webkit-transition: -webkit-box-shadow var(--250ms-animation);
-  transition: -webkit-box-shadow var(--250ms-animation);
-  transition: box-shadow var(--250ms-animation);
-  transition: box-shadow var(--250ms-animation), -webkit-box-shadow var(--250ms-animation);
+  -webkit-transition: -webkit-box-shadow var(--animation);
+  transition: -webkit-box-shadow var(--animation);
+  transition: box-shadow var(--animation);
+  transition: box-shadow var(--animation), -webkit-box-shadow var(--animation);
 }
 
 .portfolio {
@@ -1485,8 +1486,8 @@ img {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    -webkit-transition: opacity var(--250ms-animation), visibility var(--250ms-animation), pointer-events var(--250ms-animation);
-    transition: opacity var(--250ms-animation), visibility var(--250ms-animation), pointer-events var(--250ms-animation);
+    -webkit-transition: opacity var(--animation), visibility var(---animation), pointer-events var(--animation);
+    transition: opacity var(--animation), visibility var(---animation), pointer-events var(--animation);
   }
   .mobile-menu.is-open {
     opacity: 1;
@@ -1551,8 +1552,8 @@ img {
     line-height: 1.1;
     letter-spacing: 0.02em;
     color: var(--secondary-color);
-    -webkit-transition: color var(--250ms-animation);
-    transition: color var(--250ms-animation);
+    -webkit-transition: color var(--animation);
+    transition: color var(--animation);
   }
   .mobile-menu-item-link:hover,
 .mobile-menu-item-link:focus {
