--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -22,6 +22,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
+   margin: 0px;
  
    width: 168px;
    height: 88px;
@@ -29,8 +30,8 @@
    border-radius: 4px;
    fill: #8e8f99;
  
-   transition: border var(--250ms-animation),
-  fill var(--250ms-animation);
+   transition: border var(--animation),
+   fill var(--animation);
 
   @include mobile-only { 
     width: 100%;
@@ -44,6 +45,7 @@
  }
 
  .customers-list-item { 
+  max-width: 168px;
   flex-basis: calc((100% - 16px)/2);
 
   @include tablet-only { 
