--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,7 +6,7 @@
    width: 100%;
    height: 100%;
    background-color: rgba(46, 47, 66, 0.4);
-   transition: visibility var(--250ms-animation), opacity var(--250ms-animation);
+   transition: visibility var(--animation), opacity var(--animation);
  }
  
  .backdrop.is-hidden {
