--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,5 +4,5 @@
    --primary-brand: #4d5ae5;
    --secondary-color: #2e2f42;
    --basic-white-color: #ffffff;
-   --250ms-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
